--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,23 @@
   background-size: cover;
 }
 
+.modal-dialog {
+  max-width: 1040px;
+}
+
+.download {
+  background: url("../images/download-background.jpg") center center no-repeat;
+  background-size: cover;
+}
+
+.map iframe {
+  left: 0;
+  top: 0;
+  height: 400px;
+  width: 100%;
+  border: none;
+}
+
 @media (max-width: 1000px) {
   .hero .image-container {
     display: flex;
